Started to modularize the web application
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@731 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
@@ -36,8 +36,9 @@
         destination="locationGroupService"
         showBusyCursor="true"/>
 -->
-<mx:RemoteObject id="locationService" destination="locationService" />
-<mx:RemoteObject id="locationGroupService" destination="locationGroupService" />
-<mx:RemoteObject id="userService" destination="userService" />
-<mx:RemoteObject id="transportUnitService" destination="transportUnitService" />
+<mx:RemoteObject id="locationService" destination="locationService" showBusyCursor="true" />
+<mx:RemoteObject id="locationGroupService" destination="locationGroupService" showBusyCursor="true" />
+<mx:RemoteObject id="userService" destination="userService" showBusyCursor="true" />
+<mx:RemoteObject id="transportUnitService" destination="transportUnitService" showBusyCursor="true" />
+<mx:RemoteObject id="moduleManagementService" destination="moduleManagementService" showBusyCursor="true" />
 </business:ServiceLocator>
