--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/UserManagementView.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/UserManagementView.mxml
@@ -23,7 +23,7 @@
 -->
 <mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:view="org.openwms.web.flex.client.view.*"
 	xmlns:management="org.openwms.web.flex.client.view.management.*" xmlns:renderer="org.openwms.web.flex.client.view.renderers.*"
-	width="1280" height="670">
+	width="100%" height="100%">
 	<management:UserList />
 	<management:UserManagementContent />
 </mx:HBox>
