--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/StartScreen.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/StartScreen.mxml
@@ -22,54 +22,70 @@
  */
 -->
 <mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:business="org.openwms.web.flex.client.business.*"
-	xmlns:control="org.openwms.web.flex.client.control.*" xmlns:view="org.openwms.web.flex.client.view.*" layout="absolute"
+	xmlns:control="org.openwms.web.flex.client.control.*" xmlns:event="org.openwms.web.flex.client.event.*" xmlns:view="org.openwms.web.flex.client.view.*" layout="absolute"
 	backgroundGradientAlphas="[1.0, 1.0]" backgroundGradientColors="[#FFFFFF, #FFFFFF]" creationComplete="init()">
 
 	<!-- Styles -->
 	<mx:Style source="/assets/css/main.css" />
 	<mx:Style source="/assets/css/styles.css" />
-
+	
 	<!-- Scripts -->
 	<mx:Script>
 		<![CDATA[
-			import mx.collections.ArrayCollection;
-			import org.openwms.web.flex.client.components.IApplicationModule;
 			import mx.events.ModuleEvent;
+            import mx.events.MenuEvent;
 			import mx.modules.IModuleInfo;
 			import mx.modules.ModuleManager;
+            import mx.managers.PopUpManager;
+            import mx.managers.DragManager;
+            import mx.messaging.channels.AMFChannel;
+            import mx.messaging.ChannelSet;
+            import mx.rpc.events.ResultEvent;
+            import mx.collections.ArrayCollection;
+            import mx.collections.XMLListCollection;
 			import mx.controls.Alert;
+            import flash.events.Event;
+            import org.openwms.web.flex.client.IApplicationModule;
 			import org.openwms.web.flex.client.model.ModelLocator;
+            import org.openwms.web.flex.client.control.MainController;
+            import org.openwms.web.flex.client.service.ModuleLocator;
 			import org.openwms.web.flex.client.event.SwitchScreenEvent;
-			import mx.events.MenuEvent;
+			import org.openwms.web.flex.client.event.ApplicationEvent;
+            import org.openwms.web.flex.client.event.ModulesEvent;
+            import org.openwms.web.flex.client.event.EventBroker;
+            import org.openwms.web.flex.client.command.LoadModulesCommand;
+			import org.openwms.common.domain.Module;
+			import org.openwms.common.domain.MenuItem;
             import org.granite.rpc.remoting.mxml.SecureRemoteObject;
             import org.granite.events.SecurityEvent;
-            
+
 			[Bindable]
 			private var modelLocator:ModelLocator = ModelLocator.getInstance();
+            [Bindable]
+            private var moduleLocator:ModuleLocator = ModuleLocator.getInstance();
+            [Bindable]
+            private var broker:EventBroker = EventBroker.getInstance();
 			[Bindable]
             private var srv:SecureRemoteObject = null;
+            [Bindable]
+            protected var mainController = new MainController(); 
+            [Bindable]
+            public var menuBarCollection:XMLListCollection;
+            [Bindable]
+            var menuItems:ArrayCollection;
             
-            private var mInfo_common:IModuleInfo;
-            private var mInfo_tms:IModuleInfo;
-            private var mInfo_wms:IModuleInfo;
-            private var mInfo_app:IModuleInfo;
-
+            // Manager classes are loaded to the application domain
+            private var moduleManager:ModuleManager; 
+            private var popUpManager:PopUpManager;
+            private var dragManager:DragManager;
+            private var mInfo:IModuleInfo
+            
 			public function init():void {
                 srv = new SecureRemoteObject("userService");
-                srv.login();
-                /*
-                srv.source = "personService";
-                srv.channelSet = new ChannelSet();
-                srv.channelSet.addChannel(new AMFChannel("graniteamf", "http://{server.name}:{server.port}/graniteds-spring/graniteamf/amf"));
-                srv.showBusyCursor = true;
-                var operation:Operation = new Operation();
-                operation.name = "findAllPersons";
-                operation.addEventListener(ResultEvent.RESULT, onFindAllPersonsResult);
-                srv.operations = {findAllPersons: operation};
-                srv.addEventListener(FaultEvent.FAULT, onRemoteFault);
-                srv.addEventListener(SecurityEvent.ALL, onSecurityEvent);
-                srv.findAllPersons();
-                */
+                //srv.login();
+                registerEventListeners();
+                detectModules();
+                //configService.send();
 			}
 			
             public function onSecurityEvent(event:SecurityEvent):void {
@@ -111,26 +127,83 @@
                 loginView.loginMessageText = "";
             }
             
-            private function detectModules():void {
-            	mInfo_app = ModuleManager.getModule('openwms_app.swf');
-            	mInfo_app.addEventListener(ModuleEvent.READY, moduleLoaded);
-            	mInfo_common = ModuleManager.getModule('openwms_common.swf');
-                mInfo_common.addEventListener(ModuleEvent.READY, moduleLoaded);
-            	mInfo_tms = ModuleManager.getModule('openwms_tms.swf');
-                mInfo_tms.addEventListener(ModuleEvent.READY, moduleLoaded);
-            	mInfo_wms = ModuleManager.getModule('openwms_wms.swf');
-                mInfo_wms.addEventListener(ModuleEvent.READY, moduleLoaded);
+            private function registerEventListeners():void {
+                var broker:EventBroker = EventBroker.getInstance();
+                broker.addEventListener(ApplicationEvent.MODULE_CONFIG_CHANGED, moduleConfigChanged);
+                // When all modules are loaded from DB then notify application to start modules automatically ...
+                broker.addEventListener(ModulesEvent.MODULES_LOADED, loadAllModules);
             }
             
-            private function moduleLoaded(e:ModuleEvent):void {
-            	trace("Loaded Module:"+e.module.url);
+            /**
+             * In the case the Module confifuration has changed, a re-organize of menus and
+             * views becomes necessary.
+             */ 
+            private function moduleConfigChanged(event:ApplicationEvent):void {
+                // Modules were loaded, hence update viewStack, menuBar and popUps...
+                if (event.data != null && event.data is IApplicationModule) 
+                {
+                    var appModule:IApplicationModule = (event.data as IApplicationModule);
+                    trace("Configuration changed for Module:"+appModule.getModuleName());
+                    // Resolve MenuItems to populate application menu...
+                    menuItems = appModule.getMainMenuItems();
+                    //mainMenuBar.dataProvider.removeAll();
+                    for each (var m:Object in menuItems) {
+                        trace("m:"+m);
+                    }
+                    mainMenuBar.dataProvider = menuItems ;
+                }
             }
             
-            private function populateMenuBar(tempMenu:ArrayCollection, module:IApplicationModule):void {
-            	
+            /**
+             * This method rebuilds the viewStack of the application, and should be called,
+             * in case application modules are loaded or unloaded.
+             */
+            private function refreshViewStack()
+            {
                 
             }
+            
+            /**
+             * This method rebuilds the main application menu and should be called
+             * in case an application module is loaded or unloaded.
+             * The main menu, could be an MenuBar or any other kind of menu.
+             */
+            private function refreshMainMenu()
+            {
+                
+            }
+            
+            /**
+             * Load all modules that are configured to start automatically. This method is event triggered
+             * and called when the module configuration is loaded from the service layer.
+             */
+            public function loadAllModules(event:Event):void
+            {
+                for each (var module:Module in moduleLocator.allModules)
+                {
+                    if (module.loadOnStartup)
+                    {
+                        moduleLocator.loadModule(module);
+                    }
+                    else
+                    {
+                        trace("Module not configured to load on startup:" + module.moduleName);
+                    }
+                }
+                return;
+            }
 
+            private function updateViewStack(module:Module):void {
+                for each (var menuItem:MenuItem in module.menuItems)
+                {
+                    trace("MenuItem:"+menuItem.label);
+                }
+            }
+
+            private function detectModules():void {
+                new ApplicationEvent(ApplicationEvent.LOAD_ALL_MODULES).dispatch();
+            }
+            
 
 		]]>
 	</mx:Script>
@@ -138,32 +211,31 @@
 	<!-- Services -->
 	<business:Services />
 
+	<!-- 
 	<control:MainController />
-
+ -->
 	<mx:VBox height="100%" width="100%" verticalGap="0" backgroundColor="#C2DAEF">
 		<mx:Canvas width="100%" height="66" backgroundImage="@Embed(source='openwms_banner.jpg')" backgroundSize="100%">
 			<mx:Image source="@Embed('/assets/images/openwms_header.png')" />
 		</mx:Canvas>
 		<mx:Canvas width="100%" height="25" backgroundImage="@Embed(source='breadcrumbs.jpg')" backgroundSize="100%">
-			<mx:MenuBar id="mainMenuBar" labelField="@label" itemClick="onMenuChange(event)" color="#FFFF1B" fontWeight="bold" fontSize="12" alpha="0.0">
+			<mx:MenuBar id="mainMenuBar" labelField="@label" itemClick="onMenuChange(event)" color="#00286e" fontWeight="bold" fontSize="12" alpha="0.0">
 				<mx:XMLList>
-					<menuitem label="OpenWMS">
-						<menuitem label="Connect ..." enabled="false" />
-						<menuitem label="Logout" enabled="false" />
+					<menuitem label="Application">
+                        <menuitem label="Connect ..." enabled="false" />
+                        <menuitem label="Logout" enabled="false" />
 					</menuitem>
 					<menuitem label="Administration">
-						<menuitem label="Users" action="{SwitchScreenEvent.SHOW_LOCATION_VIEW}" />
-						<menuitem label="Roles" action="{SwitchScreenEvent.SHOW_LOCATION_VIEW}" />
-						<menuitem label="Security" action="{SwitchScreenEvent.SHOW_LOCATION_VIEW}" />
-					</menuitem>
-					<menuitem label="Transport Management">
-						<menuitem label="Transport Orders" enabled="false" />
+						<menuitem label="Users" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
+						<menuitem label="Roles" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
+						<menuitem label="Security" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
 					</menuitem>
 					<menuitem label="Warehouse">
 						<menuitem label="Ordering" enabled="false" />
 						<menuitem label="Receiving" enabled="false" />
 					</menuitem>
 					<menuitem label="Stock Configuration">
+                        <menuitem label="Module Management" action="{SwitchScreenEvent.SHOW_MODULE_MGMT_VIEW}" />
 						<menuitem label="Transport Units" action="{SwitchScreenEvent.SHOW_TRANSPORTUNIT_VIEW}" />
                         <menuitem label="Locations" action="{SwitchScreenEvent.SHOW_LOCATION_VIEW}" />
 						<menuitem label="Users" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
@@ -171,13 +243,15 @@
 					</menuitem>
 					<menuitem label="Monitoring">
 						<menuitem label="Reports" enabled="false" />
-					</menuitem>
+					</menuitem> 
 				</mx:XMLList>
 			</mx:MenuBar>
 		</mx:Canvas>
 		<mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-		<mx:ViewStack id="myViewStack" selectedIndex="{loginView.authenticated ? modelLocator.mainViewStackIndex : 0}">
+		<mx:ViewStack id="myViewStack" selectedIndex="{loginView.authenticated ? modelLocator.mainViewStackIndex : modelLocator.mainViewStackIndex}">
             <view:LoginView id="loginView" onLogin="login" cornerRadius="20" borderStyle="solid" alpha="1.0" borderThickness="3"/>
+            <view:EmptyScreenView />
+            <view:ModuleManagementView />
 			<view:LocationView />
 			<view:LocationGroupView />
 			<view:UserManagementView />
