Started to modularize the app
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@760 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/Main.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/Main.mxml
@@ -22,7 +22,7 @@
  */
 -->
 <mx:Module xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="400" height="300"
-    creationComplete="initApp()" xmlns:view="org.openwms.web.flex.client.common.view.*" implements="org.openwms.web.flex.client.lib.api.IApplicationModule">
+    creationComplete="initApp()" xmlns:view="org.openwms.web.flex.client.common.view.*" implements="org.openwms.web.flex.client.IApplicationModule">
 
     <mx:Script>
         <![CDATA[
@@ -67,7 +67,7 @@
          */
         public function getModuleName():String
         {
-            return "TMS";
+            return "COMMON";
         }
 
         /**
